--- a/css/style.css
+++ b/css/style.css
@@ -1,217 +1,346 @@
-:root{
---footer-gmail: rgba(255, 255, 255, 0.6);
---footer-color:#D9D9D9;
---white:#FFFFFF;
---blue:#2196F3;
---prymary-text:#757575;
---title-text:#212121;
---footer-background:#2F303A;
---ivory-color:#F5F4FA;
---header-background:#ECECEC;
+:root {
+  --footer-gmail: rgba(255, 255, 255, 0.6);
+  --footer-color: #d9d9d9;
+  --white: #ffffff;
+  --blue: #2196f3;
+  --prymary-text: #757575;
+  --title-text: #212121;
+  --footer-background: #2f303a;
+  --ivory-background-color: #f5f4fa;
+  --header-background: #ececec;
+  --primary-font: "Roboto", sans-serif;
+  
 }
 
-body{
-color: var(--prymary-text);
-background-color:var(--white);
-letter-spacing: 0.03em;
-font-family:'Roboto',sans-serif;
+body {
+  letter-spacing: 0.03em;
+  font-family:var(--primary-font);
+  color: var(--prymary-text);
+  background-color: var(--white);
 }
-.hidden{
-display:none;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul{
+    margin: 0px;
+    padding: 0px;
 }
-.section-title{
-color:var(--title-text);
-font-weight: 700;
-font-size:36px;
-line-height:1.17;
-text-align:center;
+.hidden {
+  display: none;
 }
-
+.title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  color: var(--title-text);
+}
+.section{
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 /* studio */
 
 /* header */
 
-.logo{
-color:var(--blue);
-font-family:'Raleway';
-font-weight:700;
-font-size:26px;
-line-height:1.19;
-text-decoration:none;
+.header{
+  border-bottom: 1px solid #ECECEC;
 }
-.logo-header{
-color:#000000 ;
+.container{
+    margin: 0 auto;
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
-.nav-list{
-list-style:none;
+.container-header{
+    display: flex;
+    align-items: center;
+    padding-top: 24px;
+    padding-bottom: 25px;
 }
-.nav-link{
-color: var(--title-text);
-font-weight:500;
-font-size:14px;
-line-height:1.14;
-letter-spacing:0.02em;
-text-decoration:none;
+.logo {
+    margin-right: 93px;
+    font-family: "Raleway";
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    text-decoration: none;
+    color: var(--blue);S
+}
+.logo-header {
+  color: #000000;
+}
+.nav{
+    display: flex;
+    align-items: center;
+}
+.nav-list {
+  display: flex;
+  list-style: none;
+
+}
+.nav-item:not(:last-child) {
+    padding-right:50px;
+}
+.nav-link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    color: var(--title-text);
 }
 .nav-link:hover,
-.nav-link:focus{
-color:var(--blue);
+.nav-link:focus {
+  color: var(--blue);
 }
-.nav-link.active{
-    color: var(--blue);
+.nav-link.active {
+  color: var(--blue);
+}
+.contacts {
+  list-style: none;
+  display: flex;
 }
 .contacts{
-list-style:none; 
+    margin-left: auto;
 }
-.contacts-link{
-color: var(--prymary-text);
-font-weight:500;
-font-size:14px;
-line-height:1.14;
-letter-spacing:0.02em;
-text-decoration:none;
+
+.contacts-item:not(:last-child) {
+margin-right: 40px;
 }
+.contacts-link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    color: var(--prymary-text);
+}
+
 .contacts-link:hover,
-.contacts-link:focus{
-color:var(--blue);
+.contacts-link:focus {
+  color: var(--blue);
 }
 
 /* main */
 
 /* section one */
 
-.hero{
-background-color:var(--footer-background);
+.container-hero{
+    padding-top: 200px;
+    padding-bottom: 200px;
 }
-.hero-title{
-color:var(--white);
-text-transform:uppercase;
-font-weight:900px;
-font-size:44px;
-line-height:1.36;
-text-align:center;
-letter-spacing:0.06em;
+
+.hero {
+  background-color: var(--footer-background);
 }
-.hero-button{
-color:var(--white);
-background-color:var(--blue);
-font-weight:700;
-font-size:16px;
-line-height:1.88;
-letter-spacing:0.06em;
-cursor:pointer;
+.hero-title {
+  margin-bottom: 30px;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--white);
+}
+.hero-button {
+  padding:10px 19px 10px 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  border-radius: 4px;
+  border: none;
+  color: var(--white);
+  background-color: var(--blue);
 }
 
 /* section two */
 
-.benefits{
-background-color:var(--white);
+.benefits {
+  background-color: var(--white);
 }
-.benefits-list{
-list-style: none;
+.benefits-list {
+  display: flex;
+  list-style: none;
 }
-.benefits-caption{
-color:var(--title-text);
-font-weight:700;
-font-size:14px;
-line-height:1.14;
+.benefits-item:not(:last-child){
+    margin-right: 30px;
 }
-.benefits-desc{
-font-size:14px;
-line-height:1.71;
+.benefits-caption {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    color: var(--title-text);
+}
+.benefits-desc {
+  font-size: 14px;
+  line-height: 1.71;
 }
 
 /* section three */
-.work-list{
-list-style: none;
+
+.about{
+    padding-top: 0px;
+}
+.title-about{
+    margin-bottom: 50px;
+}
+.work-list {
+  display: flex;
+  list-style: none;
+}
+.work-item:not(:last-child){
+    margin-right: 30px;
 }
 
 /* section four */
-
-.workers{
-background-color: var(--ivory-color);
+.workers {
+  background-color: var(--ivory-background-color);
 }
-.workers-list{
-list-style: none;
+.title-workers{
+    margin-bottom: 50px;
 }
-.workers-item{
-background-color:var(--white);
+.workers-list {
+  display: flex;
+  list-style: none;
 }
-.worker-name{
-color: var(--title-text);
-font-weight:500;
-font-size:16px;
-line-height:1.19;
+.workers-item {
+  background-color: var(--white);
+  border-radius: 0px 0px 4px 4px;
 }
-.work-desc{
-font-style:500;
-font-size:16px;
-line-height:1.19;
+.workers-item:not(:last-child){
+    margin-right: 30px;
+}
+.worker-picture{
+    margin-bottom: 30px;
+}
+.worker-name {
+    margin-bottom: 10px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+    color: var(--title-text);
+}
+.work-desc {
+  margin-bottom: 30px;
+  font-style: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
 }
 
 /* footer */
 
-.footer{
-background-color: var(--footer-background);
+.footer {
+  background-color: var(--footer-background);
 }
-.logo-footer{
-color: var(--white);
+.container-footer{
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
-.contact-info{
-list-style: none;
+.logo-footer-container{
+    margin-bottom: 28px;
 }
-.adress{
-color:var(--white);
-font-size:14px;
-line-height:1.14;
-text-decoration:none;
+.logo-footer {
+  color: var(--white);
+}
+.contact-info-items:not(:last-child){
+    margin-bottom: 12px;
+}
+.contact-info {
+  list-style: none;
+}
+.adress {
+    font-size: 14px;
+    line-height: 1.14;
+    text-decoration: none;
+    color: var(--white);
 }
 .adress:hover,
-.adress:focus{
-color:var(--blue);
+.adress:focus {
+  color: var(--blue);
 }
-.footer-contacts{
-color: var(--footer-color);
-font-size:14px;
-line-height:1.14;
-text-decoration:none;
+.footer-contacts {
+    font-size: 14px;
+    line-height: 1.14;
+    text-decoration: none;
+    color: var(--footer-color);
 }
 .footer-contacts:hover,
-.footer-contacts:focus{
-color:var(--blue);
+.footer-contacts:focus {
+  color: var(--blue);
 }
 
 /* portfolio */
 
-.filter-list{
-list-style: none;
+.filter-list {
+  display: flex;
+  justify-content:center; 
+  margin-bottom: 50px;
+  list-style: none;
 }
-.filter-button{
-color: var(--title-text);
-background-color: var(--ivory-color);
-font-weight:500;
-font-size:16px;
-line-height:1.63;
-cursor:pointer;
-text-decoration:none;
+.filter-item:not(:last-child){
+    margin-right: 8px;
+}
+.filter-button {
+    padding: 6px 22px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.63;
+    cursor: pointer;
+    text-decoration: none;
+    border-radius: 4px;
+    border: none;
+    color: var(--title-text);
+    background-color: var(--ivory-background-color);
 }
 .filter-button:hover,
-.filter-button:focus{
-color:var(--white);
-background-color:var(--blue);
+.filter-button:focus {
+  color: var(--white);
+  background-color: var(--blue);
 }
-.projects-list{
-list-style: none;
+.projects-list {
+  display: flex;
+  flex-wrap:wrap;
+  list-style: none;
 }
-.project-title{
-color:var(--title-text);
-font-weight:700;
-font-size:18px;
-line-height:2;
-letter-spacing:0.06em;
+.project-item{
+margin-right: 30px;
+margin-bottom: 30px;
+border: 1px solid #EEEEEE;
 }
-.project-type{
-font-size:16px;
-line-height:1.88;
+.project-item:nth-child(3n + 3) {
+    margin-right: 0px;
 }
-
+.project-item:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
+}
+.project-desc-container{
+    padding: 20px 24px;
+    border-right: 1px solid #EEEEEE;
+    border-bottom: 1px solid #EEEEEE;
+    border-left: 1px solid #EEEEEE;
+}
+.project-title {
+    margin-bottom: 4px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    color: var(--title-text);
+}
+.project-type {
+  font-size: 16px;
+  line-height: 1.88;
+}
