--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,11 @@
   --ivory-background-color: #f5f4fa;
   --header-background: #ececec;
   --primary-font: "Roboto", sans-serif;
-  
 }
 
 body {
   letter-spacing: 0.03em;
-  font-family:var(--primary-font);
+  font-family: var(--primary-font);
   color: var(--prymary-text);
   background-color: var(--white);
 }
@@ -25,9 +24,14 @@ h4,
 h5,
 h6,
 p,
-ul{
-    margin: 0px;
-    padding: 0px;
+ul {
+  margin: 0px;
+  padding: 0px;
+}
+img {
+  height: auto;
+  display: block;
+  max-width: 100%;
 }
 .hidden {
   display: none;
@@ -39,60 +43,63 @@ ul{
   text-align: center;
   color: var(--title-text);
 }
-.section{
-    padding-top: 94px;
-    padding-bottom: 94px;
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 /* studio */
 
 /* header */
 
-.header{
-  border-bottom: 1px solid #ECECEC;
+.container {
+  margin: 0 auto;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
-.container{
-    margin: 0 auto;
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
+.header {
+  display: flex;
+  align-items: center;
+  padding-top: 24px;
+  padding-bottom: 25px;
+  border-bottom: 1px solid #ececec;
 }
-.container-header{
-    display: flex;
-    align-items: center;
-    padding-top: 24px;
-    padding-bottom: 25px;
+
+.container-header {
+  display: flex;
+}
+.logo-header-container {
+  margin-right: 93px;
 }
 .logo {
-    margin-right: 93px;
-    font-family: "Raleway";
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    text-decoration: none;
-    color: var(--blue);S
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  text-decoration: none;
+  color: var(--blue);
 }
 .logo-header {
   color: #000000;
 }
-.nav{
-    display: flex;
-    align-items: center;
+.nav {
+  display: flex;
+  align-items: center;
 }
 .nav-list {
   display: flex;
   list-style: none;
-
 }
 .nav-item:not(:last-child) {
-    padding-right:50px;
+  margin-right: 50px;
 }
 .nav-link {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    text-decoration: none;
-    color: var(--title-text);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: var(--title-text);
 }
 .nav-link:hover,
 .nav-link:focus {
@@ -102,23 +109,22 @@ ul{
   color: var(--blue);
 }
 .contacts {
-  list-style: none;
   display: flex;
-}
-.contacts{
-    margin-left: auto;
+  align-items: center;
+  margin-left: auto;
+  list-style: none;
 }
 
 .contacts-item:not(:last-child) {
-margin-right: 40px;
+  margin-right: 40px;
 }
 .contacts-link {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    text-decoration: none;
-    color: var(--prymary-text);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: var(--prymary-text);
 }
 
 .contacts-link:hover,
@@ -130,12 +136,9 @@ margin-right: 40px;
 
 /* section one */
 
-.container-hero{
-    padding-top: 200px;
-    padding-bottom: 200px;
-}
-
 .hero {
+  padding-top: 200px;
+  padding-bottom: 200px;
   background-color: var(--footer-background);
 }
 .hero-title {
@@ -149,7 +152,7 @@ margin-right: 40px;
   color: var(--white);
 }
 .hero-button {
-  padding:10px 19px 10px 20px;
+  padding: 10px 19px 10px 20px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -173,14 +176,15 @@ margin-right: 40px;
   display: flex;
   list-style: none;
 }
-.benefits-item:not(:last-child){
-    margin-right: 30px;
+.benefits-item:not(:last-child) {
+  margin-right: 30px;
 }
 .benefits-caption {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    color: var(--title-text);
+  margin-bottom: 10px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  color: var(--title-text);
 }
 .benefits-desc {
   font-size: 14px;
@@ -189,26 +193,26 @@ margin-right: 40px;
 
 /* section three */
 
-.about{
-    padding-top: 0px;
+.about {
+  padding-top: 0px;
 }
-.title-about{
-    margin-bottom: 50px;
+.title-about {
+  margin-bottom: 50px;
 }
 .work-list {
   display: flex;
   list-style: none;
 }
-.work-item:not(:last-child){
-    margin-right: 30px;
+.work-item:not(:last-child) {
+  margin-right: 30px;
 }
 
 /* section four */
 .workers {
   background-color: var(--ivory-background-color);
 }
-.title-workers{
-    margin-bottom: 50px;
+.title-workers {
+  margin-bottom: 50px;
 }
 .workers-list {
   display: flex;
@@ -216,24 +220,25 @@ margin-right: 40px;
 }
 .workers-item {
   background-color: var(--white);
-  border-radius: 0px 0px 4px 4px;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
-.workers-item:not(:last-child){
-    margin-right: 30px;
+.workers-item:not(:last-child) {
+  margin-right: 30px;
 }
-.worker-picture{
-    margin-bottom: 30px;
+.worker-desc-container {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .worker-name {
-    margin-bottom: 10px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.19;
-    text-align: center;
-    color: var(--title-text);
+  margin-bottom: 10px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  color: var(--title-text);
 }
 .work-desc {
-  margin-bottom: 30px;
   font-style: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -245,37 +250,41 @@ margin-right: 40px;
 .footer {
   background-color: var(--footer-background);
 }
-.container-footer{
-    padding-top: 60px;
-    padding-bottom: 60px;
+.footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
-.logo-footer-container{
-    margin-bottom: 28px;
+.logo-footer-container {
+  margin-bottom: 28px;
 }
 .logo-footer {
   color: var(--white);
 }
-.contact-info-items:not(:last-child){
-    margin-bottom: 12px;
+.contact-info-items:not(:last-child) {
+  margin-bottom: 12px;
 }
 .contact-info {
   list-style: none;
 }
 .adress {
-    font-size: 14px;
-    line-height: 1.14;
-    text-decoration: none;
-    color: var(--white);
+  font-size: 14px;
+  line-height: 1.14;
+  text-decoration: none;
+  color: var(--white);
+  font-style: normal;
+}
+.contact-info-items {
+  font-style: normal;
 }
 .adress:hover,
 .adress:focus {
   color: var(--blue);
 }
 .footer-contacts {
-    font-size: 14px;
-    line-height: 1.14;
-    text-decoration: none;
-    color: var(--footer-color);
+  font-size: 14px;
+  line-height: 1.14;
+  text-decoration: none;
+  color: var(--footer-color);
 }
 .footer-contacts:hover,
 .footer-contacts:focus {
@@ -286,24 +295,24 @@ margin-right: 40px;
 
 .filter-list {
   display: flex;
-  justify-content:center; 
+  justify-content: center;
   margin-bottom: 50px;
   list-style: none;
 }
-.filter-item:not(:last-child){
-    margin-right: 8px;
+.filter-item:not(:last-child) {
+  margin-right: 8px;
 }
 .filter-button {
-    padding: 6px 22px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.63;
-    cursor: pointer;
-    text-decoration: none;
-    border-radius: 4px;
-    border: none;
-    color: var(--title-text);
-    background-color: var(--ivory-background-color);
+  padding: 6px 22px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  cursor: pointer;
+  text-decoration: none;
+  border-radius: 4px;
+  border: none;
+  color: var(--title-text);
+  background-color: var(--ivory-background-color);
 }
 .filter-button:hover,
 .filter-button:focus {
@@ -312,33 +321,36 @@ margin-right: 40px;
 }
 .projects-list {
   display: flex;
-  flex-wrap:wrap;
+  flex-wrap: wrap;
   list-style: none;
+  margin-right: -30px;
+  margin-bottom: -30px;
 }
-.project-item{
-margin-right: 30px;
-margin-bottom: 30px;
-border: 1px solid #EEEEEE;
+.project-item {
+  /* flex-basis: calc((100% - 60px) / 3); */
+  margin-right: 30px;
+  margin-bottom: 30px;
+  border: 1px solid #eeeeee;
 }
-.project-item:nth-child(3n + 3) {
-    margin-right: 0px;
+/* .project-item:nth-child(3n + 3) {
+  margin-right: 0px;
 }
 .project-item:nth-last-child(-n + 3) {
-    margin-bottom: 0px;
-}
-.project-desc-container{
-    padding: 20px 24px;
-    border-right: 1px solid #EEEEEE;
-    border-bottom: 1px solid #EEEEEE;
-    border-left: 1px solid #EEEEEE;
+  margin-bottom: 0px;
+} */
+.project-desc-container {
+  padding: 20px 24px;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
 }
 .project-title {
-    margin-bottom: 4px;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
-    color: var(--title-text);
+  margin-bottom: 4px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--title-text);
 }
 .project-type {
   font-size: 16px;
