--- a/css/style.css
+++ b/css/style.css
@@ -327,10 +327,9 @@ img {
   margin-bottom: -30px;
 }
 .project-item {
-  /* flex-basis: calc((100% - 60px) / 3); */
+  flex-basis: calc((100% - 90px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
-  border: 1px solid #eeeeee;
 }
 /* .project-item:nth-child(3n + 3) {
   margin-right: 0px;
